add rounded-full, apply to profile page

--- a/profile.html
+++ b/profile.html
@@ -403,7 +403,7 @@
                                               "
                                             >
                                               <img
-                                                class="img-full"
+                                                class="img-full rounded-full"
                                                 aria-hidden="true"
                                                 alt="Jose Angelo User Profile"
                                                 elementtiming="LCP-target"
@@ -617,7 +617,7 @@
                                                   "
                                                 >
                                                   <img
-                                                    class="img-full"
+                                                    class="img-full rounded-full"
                                                     aria-hidden="true"
                                                     alt="Jose Angelo User Profile"
                                                     elementtiming="LCP-target"
@@ -1415,7 +1415,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                           "
                                                         >
                                                           <img
-                                                            class="img-full"
+                                                            class="img-full rounded-full"
                                                             aria-hidden="true"
                                                             alt="Jesselle User Profile"
                                                             decoding="async"
@@ -1497,7 +1497,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         aria-label="Jose Angelo User Profile"
                                       >
                                         <img
-                                          class="img-full"
+                                          class="img-full rounded-full"
                                           style="
                                             object-fit: cover;
                                             vertical-align: bottom;
@@ -1712,7 +1712,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             aria-label="Jose Angelo User Profile"
                                           >
                                             <img
-                                              class="img-full"
+                                              class="img-full rounded-full"
                                               style="
                                                 object-fit: cover;
                                                 vertical-align: bottom;
@@ -2518,7 +2518,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                     aria-label="Jesselle User Profile"
                                                   >
                                                     <img
-                                                      class="img-full"
+                                                      class="img-full rounded-full"
                                                       aria-hidden="true"
                                                       alt="Jesselle User Profile"
                                                       decoding="async"
