--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -215,7 +215,7 @@
                       <div tabindex="-1" class="_1i7ccu91">
                         <div class="_1unac3l">
                           <div id="FMP-target">
-                            <div class="_1ynbv25">
+                            <div class="block">
                               <main id="site-content">
                                 <div class="flex-before-after dir dir-ltr">
                                   <div
