fx header calendar-agenda

--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -748,7 +748,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="hidden inline-md hidden-xl">
+                          <div class="hidden inline-sm hidden-xl">
                             <div class="main-content__header-action-btn">
                               <div>
                                 <div>
