--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -3092,7 +3092,45 @@
                   </div>
                   <section aria-label="Agenda list" class="main-content__body-center">
                     <div data-testid="calendar-grid" class="rbc-calendar">
-                      <div class="main-content__agenda">
+                      <div class="_45lad6">
+                        <div class="_1n3lp0u">
+                          <section role="status" class="i144hzgs dir dir-ltr">
+                            <div class="ccmqn89 dir dir-ltr">
+                              <div class="c1mzlq0d dir dir-ltr"><svg viewBox="0 0 48 48"
+                                  xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
+                                  focusable="false"
+                                  style="display: block; height: 48px; width: 48px; fill: rgb(227, 28, 95); stroke: currentcolor;">
+                                  <g>
+                                    <g stroke="none">
+                                      <path
+                                        d="M43 8v21.295L32.295 40l-10.359.001A11.971 11.971 0 0 0 26 31c0-6.627-5.373-12-12-12a12.02 12.02 0 0 0-3.001.378L11 8h32z"
+                                        fill-opacity=".2"></path>
+                                      <path
+                                        d="M32 42v-8a5 5 0 0 1 4.783-4.995L37 29h8V6H34v2h-2V6H22v2h-2V6H9v14.5H7V6a2 2 0 0 1 1.85-1.995L9 4h11V2h2v2h10V2h2v2h11a2 2 0 0 1 1.995 1.85L47 6v24.953L33.953 44H15v-2h17zm12.123-11H37a3 3 0 0 0-2.995 2.824L34 34v7.122L44.123 31z">
+                                      </path>
+                                    </g>
+                                    <g fill="none" stroke-width="2">
+                                      <path
+                                        d="M14 43c.328 0 .653-.013.974-.039C21.146 42.465 26 37.299 26 31c0-6.627-5.373-12-12-12A11.995 11.995 0 0 0 2 31c0 6.627 5.373 12 12 12z">
+                                      </path>
+                                      <path d="M23 31h-9v-9"></path>
+                                    </g>
+                                  </g>
+                                </svg></div>
+                            </div>
+                            <div class="mbv7i5o dir dir-ltr">
+                              <div class="m1g17ezz dir dir-ltr">
+                                <div class="hg6cldq dir dir-ltr">No experiences scheduled</div>
+                              </div>
+                              <div class="a106r80v dir dir-ltr">
+                                <div class=" dir dir-ltr"><button type="button" class="_1lerwp6l">Schedule an
+                                    experience</button></div>
+                              </div>
+                            </div>
+                          </section>
+                        </div>
+                      </div>
+                      <!-- <div class="main-content__agenda">
                         <div class="main-content__agenda-wrapper">
                           <div>
                             <div class="main-content__agenda-today" role="heading" aria-level="3">
@@ -3148,10 +3186,10 @@
                             </div>
                           </div>
                         </div>
-                      </div>
+                      </div> -->
                     </div>
                   </section>
-                  <div class="main-content__body-right">
+                  <div class="main-content__body-right sched-floating-btn">
                     <button aria-label="Schedule" type="button" class="main-content__agenda-list-btn">
                       <div class="main-content__schedule-wrapper">
                         <span class="main-content__schedule-icon-wrapper"><svg viewBox="0 0 32 32"
@@ -3180,11 +3218,11 @@
                     <div class="relative">
                       <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                         <div id="calendar-sidebar-heading" class="main-content__details-h1-heading">
-                          Schedule an experience on Jul 9
+                          July 9, 2022
                         </div>
                       </h1>
                       <div style="margin-top: 28px; margin-bottom: 24px">
-                        <div class="card__media" style="
+                        <!-- <div class="card__media" style="
                               background: rgb(72, 72, 72);
                               --dls-basecard-padding-top: 66.6667%;
                             ">
@@ -3200,9 +3238,9 @@
                               </div>
                             </div>
                           </div>
-                        </div>
+                        </div> -->
                       </div>
-                      <div data-testid="create-row-section-starts_at" class="main-content__details-form-">
+                      <!-- <div data-testid="create-row-section-starts_at" class="main-content__details-form-">
                         <div>
                           <div class="form-floating">
                             <label class="form-floating__control" for="starts_at">
@@ -3843,7 +3881,7 @@
                         <button data-testid="submit-experience" type="button" class="btn-dark">
                           Schedule
                         </button>
-                      </div>
+                      </div> -->
                     </div>
                   </section>
                 </div>
