--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -3221,8 +3221,10 @@
                           July 9, 2022
                         </div>
                       </h1>
-                      <div style="margin-top: 28px; margin-bottom: 24px">
-                        <!-- <div class="card__media" style="
+                      <div style="margin-top: 16px; margin-bottom: 24px">
+                        <div class="sotwrn dir dir-ltr sched-content-md">Add availability so guests can start booking!
+                        </div>
+                        <div class="card__media sched-content-xl" style="
                               background: rgb(72, 72, 72);
                               --dls-basecard-padding-top: 66.6667%;
                             ">
@@ -3238,9 +3240,13 @@
                               </div>
                             </div>
                           </div>
-                        </div> -->
+                        </div>
                       </div>
-                      <!-- <div data-testid="create-row-section-starts_at" class="main-content__details-form-">
+                      <div class="bwkwbtz dir dir-ltr sched-content-md"><button data-testid="schedule-experience-button"
+                          type="button" class="_1dj2p4gk">Schedule an
+                          experience</button></div>
+                      <div data-testid="create-row-section-starts_at sched-content-xl"
+                        class="main-content__details-form- sched-content-xl">
                         <div>
                           <div class="form-floating">
                             <label class="form-floating__control" for="starts_at">
@@ -3420,7 +3426,8 @@
                           </div>
                         </div>
                       </div>
-                      <div data-testid="create-row-section-instance_host_ids" class="main-content__details-form-">
+                      <div data-testid="create-row-section-instance_host_ids"
+                        class="main-content__details-form- sched-content-xl">
                         <div>
                           <div class="main-content__details-form-host">
                             <label class="form-floating__control" for="instance_host_ids">
@@ -3460,7 +3467,8 @@
                           </div>
                         </div>
                       </div>
-                      <div data-testid="create-row-section-booking_type" class="main-content__details-form-">
+                      <div data-testid="create-row-section-booking_type"
+                        class="main-content__details-form- sched-content-xl">
                         <div>
                           <div class="form-floating">
                             <label class="form-floating__control" for="booking_type">
@@ -3508,7 +3516,8 @@
                           </div>
                         </div>
                       </div>
-                      <div data-testid="create-row-section-price_per_guest" class="main-content__details-form-">
+                      <div data-testid="create-row-section-price_per_guest"
+                        class="main-content__details-form- sched-content-xl">
                         <div style="margin-bottom: 24px">
                           <div class="spinner-chart__input-price">
                             <label class="input-field" for="price_per_guest">
@@ -3528,7 +3537,8 @@
                           </div>
                         </div>
                       </div>
-                      <div data-testid="create-row-section-private_group_price" class="main-content__details-form-">
+                      <div data-testid="create-row-section-private_group_price"
+                        class="main-content__details-form- sched-content-xl">
                         <div style="margin-bottom: 24px">
                           <div class="spinner-chart__input-price">
                             <label class="input-field" for="private_group_price">
@@ -3550,7 +3560,8 @@
                           </div>
                         </div>
                       </div>
-                      <div data-testid="create-row-section-max_guests" class="main-content__details-form-">
+                      <div data-testid="create-row-section-max_guests"
+                        class="main-content__details-form- sched-content-xl">
                         <div class="main-content__details-form-max-group">
                           <div class="spinner-chart__input-price">
                             <label class="input-field" for="max_guests">
@@ -3570,7 +3581,8 @@
                           </div>
                         </div>
                       </div>
-                      <div data-testid="create-row-section-max_private_guests" class="main-content__details-form-">
+                      <div data-testid="create-row-section-max_private_guests"
+                        class="main-content__details-form- sched-content-xl">
                         <div class="main-content__details-form-max-group">
                           <div class="spinner-chart__input-price">
                             <label class="input-field" for="max_private_guests">
@@ -3592,7 +3604,8 @@
                           </div>
                         </div>
                       </div>
-                      <div data-testid="create-row-section-language_codes" class="main-content__details-form-">
+                      <div data-testid="create-row-section-language_codes"
+                        class="main-content__details-form- sched-content-xl">
                         <div class="relative">
                           <div class="main-content__details-form-language">
                             <div class="main-content__details-form-language-wrapper" aria-expanded="false"
@@ -3626,7 +3639,7 @@
                         </div>
                       </div>
                       <div data-testid="create-row-section-last_booking_lead_minutes"
-                        class="main-content__details-form-">
+                        class="main-content__details-form- sched-content-xl">
                         <div>
                           <div class="form-floating">
                             <label class="form-floating__control" for="last_booking_lead_minutes">
@@ -3717,7 +3730,7 @@
                         </div>
                       </div>
                       <div data-testid="create-row-section-first_booking_lead_minutes"
-                        class="main-content__details-form-">
+                        class="main-content__details-form- sched-content-xl">
                         <div>
                           <div class="form-floating">
                             <label class="form-floating__control" for="first_booking_lead_minutes">
@@ -3801,7 +3814,8 @@
                           </div>
                         </div>
                       </div>
-                      <div data-testid="create-row-section-frequency" class="main-content__details-form-">
+                      <div data-testid="create-row-section-frequency"
+                        class="main-content__details-form- sched-content-xl">
                         <div class="main-content__details-form-repeat-sched">
                           <div class="form-floating">
                             <label class="form-floating__control" for="frequency">
@@ -3837,7 +3851,8 @@
                           </div>
                         </div>
                       </div>
-                      <div data-testid="create-row-section-instance_notes" class="main-content__details-form-">
+                      <div data-testid="create-row-section-instance_notes"
+                        class="main-content__details-form- sched-content-xl">
                         <div class="main-content__details-form-private-note" id="instance_notes-label">
                           Private note (optional)
                         </div>
@@ -3871,7 +3886,7 @@
                         <div class="main-content__details-form-private-textarea-overlay"></div>
                       </div>
                     </div>
-                    <div class="button__mt-24">
+                    <div class="button__mt-24 sched-content-xl">
                       <div class="main-content__details-button-wrapper">
                         <div class="main-content__details-cancel-button-wrapper">
                           <button type="button" class="btn-link-condensed">
@@ -3881,7 +3896,7 @@
                         <button data-testid="submit-experience" type="button" class="btn-dark">
                           Schedule
                         </button>
-                      </div> -->
+                      </div>
                     </div>
                   </section>
                 </div>
