--- a/press-release.html
+++ b/press-release.html
@@ -16,8 +16,8 @@
     <div class="offcanvas-wrap">
       <div class="offcanvas-wrap-overlay"></div>
 
-      <header class="header">
-        <div class="container">
+      <header class="press-release__header">
+        <div class="press-release__container">
           <div class="header__backdrop">
             <div id="skipnav">
               <p class="skipnav">
@@ -25,14 +25,14 @@
               </p>
             </div>
             <a
-              class="header__logo"
+              class="press-release__logo"
               href="https://news.airbnb.com/"
               tabindex="-1"
               ><span>Airbnb</span></a
             >
-            <a class="header__site" href="https://news.airbnb.com/">News</a>
+            <a class="press-release__site" href="https://news.airbnb.com/">News</a>
             <button
-              class="header__site header__toggle"
+              class="press-release__site press-release__toggle"
               data-toggle="offcanvasRight"
             >
               <span class="sr-only">Toggle navigation</span>
@@ -41,7 +41,7 @@
               <span></span>
             </button>
           </div>
-          <nav class="header__nav">
+          <nav class="press-release__nav">
             <ul id="menu-primary-navigation" class="nav">
               <li
                 id="menu-item-20"
@@ -327,7 +327,7 @@
                 class="header__searchButton js-header__searchButton"
                 aria-label="Search"
               >
-                <span class="header__searchButtonLabel">Search</span>
+                <span class="header__searchButtonLabel font-w-bold">Search</span>
               </button>
               <button
                 type="button"
