Add products page gallery and lightbox

--- a/products-luxe.html
+++ b/products-luxe.html
@@ -18595,7 +18595,7 @@
                             <div role="dialog" aria-label="Property overview" aria-modal="true" class="_14oeh8k8">
                               <div class="_xgxxi4">
                                 <div class="_1kpxj8f"><button data-button="close" aria-label="Close" type="button"
-                                    class="_oda838"><span class="_e296pg"><svg viewBox="0 0 32 32"
+                                    class="_oda838"><span class="relative"><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
                                         style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
@@ -18607,7 +18607,7 @@
                                       </svg></span></button></div>
                                 <div>
                                   <div class="block"><button aria-label="Share" type="button" class="_oda838"><span
-                                        class="_e296pg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                        class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                           aria-hidden="true" role="presentation" focusable="false"
                                           style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
                                           <g fill="none">
@@ -22951,7 +22951,7 @@
                 <div class="_1rxxw62">
                   <div class="_1qkaeb4">
                     <div class="_1ynbv25"><button data-button="close" aria-label="Back" type="button"
-                        class="_4ijurz"><span class="_e296pg"><svg viewBox="0 0 18 18" role="presentation"
+                        class="_4ijurz"><span class="relative"><svg viewBox="0 0 18 18" role="presentation"
                             aria-hidden="true" focusable="false"
                             style="height: 16px; width: 16px; display: block; fill: rgb(255, 255, 255);">
                             <path
@@ -22962,7 +22962,7 @@
                 </div>
                 <div class="_v7xhdzy">
                   <div class="_1ynbv25"><button aria-label="Share" type="button" class="_4ijurz"><span
-                        class="_e296pg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                        class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                           role="presentation" focusable="false"
                           style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
                           <g fill="none">
@@ -23040,7 +23040,7 @@
                 <div class="_1rxxw62">
                   <div class="_1qkaeb4">
                     <div class="_1ynbv25"><button data-button="close" aria-label="Back" type="button" class="_4ijurz"><span
-                          class="_e296pg"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
+                          class="relative"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
                             focusable="false"
                             style="height: 16px; width: 16px; display: block; fill: rgb(255, 255, 255);">
                             <path
@@ -23051,7 +23051,7 @@
                 </div>
                 <div class="_v7xhdzy">
                   <div class="_1ynbv25"><button aria-label="Share" type="button" class="_4ijurz"><span
-                        class="_e296pg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                        class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                           role="presentation" focusable="false"
                           style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
                           <g fill="none">
