--- a/products-plus.html
+++ b/products-plus.html
@@ -4062,7 +4062,7 @@
               style="border-width: 0px 6px; max-width: 72.7273%; flex: 0 0 72.7273%;">
               <div data-key="Always fully equipped" class="h-full">
                 <div class="_ctz3yu">
-                  <div class="_e296pg">
+                  <div class="relative">
                     <div class="_v0gz4uz" role="img" aria-busy="false"
                       aria-label="A colorful illustration of bathroom essentials, including towels, shampoo, and soap."
                       style="border-radius: 8px; --dls-liteimage-padding-top:66.6667%;">
@@ -4100,7 +4100,7 @@
               style="border-width: 0px 6px; max-width: 72.7273%; flex: 0 0 72.7273%;">
               <div data-key="One-of-a-kind details" class="h-full">
                 <div class="_ctz3yu">
-                  <div class="_e296pg">
+                  <div class="relative">
                     <div class="_v0gz4uz" role="img" aria-busy="false"
                       aria-label="An illustration of a plant, books, and decorative items on top of a dresser."
                       style="border-radius: 8px; --dls-liteimage-padding-top:66.6667%;">
@@ -4139,7 +4139,7 @@
               style="border-width: 0px 6px; max-width: 72.7273%; flex: 0 0 72.7273%;">
               <div data-key="Exceptional hospitality" class="h-full">
                 <div class="_ctz3yu">
-                  <div class="_e296pg">
+                  <div class="relative">
                     <div class="_v0gz4uz" role="img" aria-busy="false"
                       aria-label="An illustration of a tea time setup, with cookies, tea, and a tea pot on a platter."
                       style="border-radius: 8px; --dls-liteimage-padding-top:66.6667%;">
@@ -19426,7 +19426,7 @@
                           <div role="dialog" aria-label="Property overview" aria-modal="true" class="_14oeh8k8">
                             <div class="_xgxxi4">
                               <div class="_1kpxj8f"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span
-                                    class="_e296pg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                    class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                       aria-hidden="true" role="presentation" focusable="false"
                                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                                       <g fill="none">
@@ -19437,7 +19437,7 @@
                                     </svg></span></button></div>
                               <div>
                                 <div class="block"><button aria-label="Share" type="button" class="_oda838"><span
-                                      class="_e296pg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                      class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
                                         style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
                                         <g fill="none">
@@ -21867,7 +21867,7 @@
                 <div class="_1rxxw62">
                   <div class="_1qkaeb4">
                     <div class="_1ynbv25"><button data-button="close" aria-label="Back" type="button" class="_4ijurz"><span
-                          class="_e296pg"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
+                          class="relative"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
                             focusable="false"
                             style="height: 16px; width: 16px; display: block; fill: rgb(255, 255, 255);">
                             <path
@@ -21878,7 +21878,7 @@
                 </div>
                 <div class="_v7xhdzy">
                   <div class="_1ynbv25"><button aria-label="Share" type="button" class="_4ijurz"><span
-                        class="_e296pg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                        class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                           role="presentation" focusable="false"
                           style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
                           <g fill="none">
@@ -21956,7 +21956,7 @@
               <div class="_1rxxw62">
                 <div class="_1qkaeb4">
                   <div class="_1ynbv25"><button data-button="close" aria-label="Back" type="button" class="_4ijurz"><span
-                        class="_e296pg"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
+                        class="relative"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
                           focusable="false"
                           style="height: 16px; width: 16px; display: block; fill: rgb(255, 255, 255);">
                           <path
@@ -21967,7 +21967,7 @@
               </div>
               <div class="_v7xhdzy">
                 <div class="_1ynbv25"><button aria-label="Share" type="button" class="_4ijurz"><span
-                      class="_e296pg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                      class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                         role="presentation" focusable="false"
                         style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
                         <g fill="none">
@@ -22056,7 +22056,7 @@
                           <div role="dialog" aria-label="Property overview" aria-modal="true" class="_14oeh8k8">
                             <div class="_xgxxi4">
                               <div class="_1kpxj8f"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span
-                                    class="_e296pg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                    class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                       aria-hidden="true" role="presentation" focusable="false"
                                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                                       <g fill="none">
