--- a/edit/title.html
+++ b/edit/title.html
@@ -318,14 +318,14 @@
                 <div class="site-content__page-wrapper">
                   <div class="site-content__page-container" id="lyt-page-container">
                     <div id="lyt-main-header" class="site-content__page-header">
-                      <div class="header__logo">
+                      <div class="">
                         <button
                           id="side-nav-toggle"
                           aria-expanded="true"
                           type="button"
                           class="header__logo-btn"
                         >
-                          <span class="box-border"
+                          <span
                             ><svg
                               viewBox="0 0 16 16"
                               role="img"
