Add online-experience page gallery

--- a/products-luxe.html
+++ b/products-luxe.html
@@ -22950,7 +22950,7 @@
                     photo 1 of 98</span><span aria-hidden="true">1 / 98</span></div>
                 <div class="_1rxxw62">
                   <div class="_1qkaeb4">
-                    <div class="_1ynbv25"><button data-button="close" aria-label="Back" type="button"
+                    <div class="block"><button data-button="close" aria-label="Back" type="button"
                         class="_4ijurz"><span class="relative"><svg viewBox="0 0 18 18" role="presentation"
                             aria-hidden="true" focusable="false"
                             style="height: 16px; width: 16px; display: block; fill: rgb(255, 255, 255);">
@@ -22961,7 +22961,7 @@
                   </div>
                 </div>
                 <div class="_v7xhdzy">
-                  <div class="_1ynbv25"><button aria-label="Share" type="button" class="_4ijurz"><span
+                  <div class="block"><button aria-label="Share" type="button" class="_4ijurz"><span
                         class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                           role="presentation" focusable="false"
                           style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
@@ -23039,7 +23039,7 @@
                     photo 4 of 98</span><span aria-hidden="true">4 / 98</span></div>
                 <div class="_1rxxw62">
                   <div class="_1qkaeb4">
-                    <div class="_1ynbv25"><button data-button="close" aria-label="Back" type="button" class="_4ijurz"><span
+                    <div class="block"><button data-button="close" aria-label="Back" type="button" class="_4ijurz"><span
                           class="relative"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
                             focusable="false"
                             style="height: 16px; width: 16px; display: block; fill: rgb(255, 255, 255);">
@@ -23050,7 +23050,7 @@
                   </div>
                 </div>
                 <div class="_v7xhdzy">
-                  <div class="_1ynbv25"><button aria-label="Share" type="button" class="_4ijurz"><span
+                  <div class="block"><button aria-label="Share" type="button" class="_4ijurz"><span
                         class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                           role="presentation" focusable="false"
                           style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
