--- a/products-plus.html
+++ b/products-plus.html
@@ -21866,7 +21866,7 @@
                     photo 1 of 56</span><span aria-hidden="true">1 / 56</span></div>
                 <div class="_1rxxw62">
                   <div class="_1qkaeb4">
-                    <div class="_1ynbv25"><button data-button="close" aria-label="Back" type="button" class="_4ijurz"><span
+                    <div class="block"><button data-button="close" aria-label="Back" type="button" class="_4ijurz"><span
                           class="relative"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
                             focusable="false"
                             style="height: 16px; width: 16px; display: block; fill: rgb(255, 255, 255);">
@@ -21877,7 +21877,7 @@
                   </div>
                 </div>
                 <div class="_v7xhdzy">
-                  <div class="_1ynbv25"><button aria-label="Share" type="button" class="_4ijurz"><span
+                  <div class="block"><button aria-label="Share" type="button" class="_4ijurz"><span
                         class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                           role="presentation" focusable="false"
                           style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
@@ -21955,7 +21955,7 @@
                   photo 4 of 56</span><span aria-hidden="true">4 / 56</span></div>
               <div class="_1rxxw62">
                 <div class="_1qkaeb4">
-                  <div class="_1ynbv25"><button data-button="close" aria-label="Back" type="button" class="_4ijurz"><span
+                  <div class="block"><button data-button="close" aria-label="Back" type="button" class="_4ijurz"><span
                         class="relative"><svg viewBox="0 0 18 18" role="presentation" aria-hidden="true"
                           focusable="false"
                           style="height: 16px; width: 16px; display: block; fill: rgb(255, 255, 255);">
@@ -21966,7 +21966,7 @@
                 </div>
               </div>
               <div class="_v7xhdzy">
-                <div class="_1ynbv25"><button aria-label="Share" type="button" class="_4ijurz"><span
+                <div class="block"><button aria-label="Share" type="button" class="_4ijurz"><span
                       class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                         role="presentation" focusable="false"
                         style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
