--- a/products.html
+++ b/products.html
@@ -21539,7 +21539,7 @@
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
         <div class="_z4lmgp">
           <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" tabindex="-1" style="position: relative;">
-            <div class="_1ynbv25">
+            <div class="block">
               <div class="flex-before-after dir dir-ltr">
                 <div style="--gp-section-max-width:1120px;">
                   <div data-plugin-in-point-id="PHOTO_TOUR_SCROLLABLE_MODAL"
@@ -21562,7 +21562,7 @@
                                         </g>
                                       </svg></span></button></div>
                                 <div>
-                                  <div class="_1ynbv25"><button aria-label="Share" type="button" class="_oda838"><span
+                                  <div class="block"><button aria-label="Share" type="button" class="_oda838"><span
                                         class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                           aria-hidden="true" role="presentation" focusable="false"
                                           style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
@@ -23075,7 +23075,7 @@
                     photo 1 of 63</span><span aria-hidden="true">1 / 63</span></div>
                 <div class="_1rxxw62">
                   <div class="_1qkaeb4">
-                    <div class="_1ynbv25"><button data-button="close" aria-label="Back" type="button"
+                    <div class="block"><button data-button="close" aria-label="Back" type="button"
                         class="_4ijurz"><span class="relative"><svg viewBox="0 0 18 18" role="presentation"
                             aria-hidden="true" focusable="false"
                             style="height: 16px; width: 16px; display: block; fill: rgb(255, 255, 255);">
@@ -23086,7 +23086,7 @@
                   </div>
                 </div>
                 <div class="_v7xhdzy">
-                  <div class="_1ynbv25"><button aria-label="Share" type="button" class="_4ijurz"><span
+                  <div class="block"><button aria-label="Share" type="button" class="_4ijurz"><span
                         class="relative"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                           role="presentation" focusable="false"
                           style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
