hide togglers on xl in edit/

--- a/edit/about.html
+++ b/edit/about.html
@@ -318,7 +318,7 @@
                 <div class="site-content__page-wrapper">
                   <div class="site-content__page-container" id="lyt-page-container">
                     <div id="lyt-main-header" class="site-content__page-header">
-                      <div>
+                      <div class='hidden-xl'>
                         <button
                           id="side-nav-toggle"
                           aria-expanded="true"
