--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -318,7 +318,7 @@
                 <div class="site-content__page-wrapper">
                   <div class="site-content__page-wrapper-main" id="lyt-page-container">
                     <div id="lyt-main-header" class="site-content__page-header">
-                      <div class="">
+                      <div class="hidden-xl">
                         <button
                           id="side-nav-toggle"
                           aria-expanded="true"
