--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -154,7 +154,7 @@
                                   <div></div>
                                 </div>
                               </div>
-                            </span><span class="a8jt5op dir dir-ltr">Experience hosting dashboard</span></button></div>
+                            </span><span class="visually-hidden dir dir-ltr">Experience hosting dashboard</span></button></div>
                         <div class="_1iti0ju">
                           <div style="margin-right: 16px;"><button class="_1ym4cfnq" aria-label="Open hosting menu"
                               type="button" aria-live="polite" aria-haspopup="true" aria-controls="hosting-flyout-menu">
