--- a/products.html
+++ b/products.html
@@ -23071,7 +23071,7 @@
           <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" style="position: relative;">
             <div>
               <div class="_1ksvx0f1">
-                <div class="_1b1whhx"><span class="a8jt5op dir dir-ltr" aria-atomic="true" aria-live="polite">Showing
+                <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true" aria-live="polite">Showing
                     photo 1 of 63</span><span aria-hidden="true">1 / 63</span></div>
                 <div class="_1rxxw62">
                   <div class="_1qkaeb4">
@@ -23416,7 +23416,7 @@
                                     style="--computedBottom:4; --computedTop:0; --computedBottomMediumAndAbove:6; --computedBottomLargeAndAbove:6; --computedTopMediumAndAbove:0; --computedTopLargeAndAbove:0;">
                                     <div class="flex-before-after dir dir-ltr" style="">
                                       <div class="_le6wlg">
-                                        <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
+                                        <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth:1120px;">
                                           <section>
                                             <div class="bk5zv5c b1w3s95i pxj7xmk dir dir-ltr"
                                               style="--computedBottom:3; --computedTop:0; --computedBottomMediumAndAbove:1; --computedBottomLargeAndAbove:3; --computedTopMediumAndAbove:5; --computedTopLargeAndAbove:5;">
@@ -24720,7 +24720,7 @@
           <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" style="position: relative;">
             <div>
               <div class="_1ksvx0f1">
-                <div class="_1b1whhx"><span class="a8jt5op dir dir-ltr" aria-atomic="true" aria-live="polite">Showing
+                <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true" aria-live="polite">Showing
                     photo 1 of 63</span><span aria-hidden="true">1 / 63</span></div>
                 <div class="_1rxxw62">
                   <div class="_1qkaeb4">
